--- a/projects/ressources/ressources.html
+++ b/projects/ressources/ressources.html
@@ -139,9 +139,9 @@
             <div class="meta"><span class="tag">Débutant</span><span class="tag">Guides</span><span class="tag">CA</span></div>
           </article>
           <article class="linkcard" data-tags="canada guides centre cyber officiel">
-            <h4><a href="https://www.cyber.gc.ca/fr" target="_blank" rel="noopener">Centre canadien pour la cybersécurité — Ressources</a></h4>
+            <h4><a href="https://www.cyber.gc.ca/fr" target="_blank" rel="noopener">Centre canadien pour la cybersécurité</a></h4>
             <p>Nouvelles, guides techniques et fiches pratiques pour PME & particuliers</p>
-            <div class="meta"><span class="tag">CA</span><span class="tag">Guides</span></div>
+            <div class="meta"><span class="tag">Débutant</span><span class="tag">Guides</span><span class="tag">CA</span></div>
           </article>
           <article class="linkcard" data-tags="guide debutant bonnes-pratiques canada officiel">
             <h4><a href="https://dmarc.org/overview/" target="_blank" rel="noopener">Sécurité des courriels: SPF / DKIM /DMARC</a></h4>
@@ -164,7 +164,7 @@
             <div class="meta"><span class="tag">Découverte</span><span class="tag">Exposition</span></div>
           </article>
           <article class="linkcard" data-tags="censys iot scan cartographie exposition">
-            <h4><a href="https://censys.com/" target="_blank" rel="noopener">Shodan</a></h4>
+            <h4><a href="https://censys.com/" target="_blank" rel="noopener">Censys</a></h4>
             <p>Moteur de recherche d’actifs connectés (IoT/OT/IT). Utile pour identifier vos ressources accessibles par Internet.</p>
             <div class="meta"><span class="tag">Découverte</span><span class="tag">Exposition</span></div>
           </article>
@@ -199,9 +199,9 @@
             <div class="meta"><span class="tag">Gouvernance</span><span class="tag">SMSI</span></div>
           </article>
           <article class="linkcard" data-tags="isa iec 62443">
-            <h4><a href="https://www.isa.org/standards-and-publications/isa-standards/isa-iec-62443-series-of-standards" target="_blank" rel="noopener">ISO/IEC 27001</a></h4>
+            <h4><a href="https://www.isa.org/standards-and-publications/isa-standards/isa-iec-62443-series-of-standards" target="_blank" rel="noopener">ISA/IEC 62443</a></h4>
             <p>Standard des systèmes de gestion de la sécurité des appareils industriels.</p>
-            <div class="meta"><span class="tag">Gouvernance</span><span class="tag">SMSI</span></div>
+            <div class="meta"><span class="tag">Gouvernance</span><span class="tag">IACS</span></div>
           </article>          
           <article class="linkcard" data-tags="cis benchmarks hardening linux windows cloud">
             <h4><a href="https://www.cisecurity.org/cis-benchmarks" target="_blank" rel="noopener">CIS Benchmarks</a></h4>
@@ -225,18 +225,18 @@
         <div class="links">
           <article class="linkcard" data-tags="zdnet fr securite actualites">
             <h4><a href="https://www.zataz.com/" target="_blank" rel="noopener">Zataz (FR)</a></h4>
-            <p>Vulnérabilités, ransomwares, fuites de données: toute l'actualité infosec en français.</p>
-            <div class="meta"><span class="tag">FR</span><span class="tag">News</span></div>
+            <p>Toute l'actualité infosec en français: vulnérabilités, ransomwares, fuites de données.</p>
+            <div class="meta"><span class="tag">FR</span><span class="tag">Nouvelles</span></div>
           </article>
           <article class="linkcard" data-tags="krebsonsecurity enquete incident vulns">
             <h4><a href="https://krebsonsecurity.com/" target="_blank" rel="noopener">Krebs on Security</a></h4>
             <p>Enquêtes et analyses fouillées sur divers thèmes: incidents, fraudes, vulnérabilités majeures.</p>
-            <div class="meta"><span class="tag">Analyses</span></div>
+            <div class="meta"><span class="tag">Analyses</span><span class="tag">Nouvelles</span></div>
           </article>
           <article class="linkcard" data-tags="dark reading magazine news pro">
             <h4><a href="https://www.darkreading.com/" target="_blank" rel="noopener">Dark Reading</a></h4>
             <p>Nouvelles: menaces, détection, vulnérabilités, cloud, IAM, OT/IoT.</p>
-            <div class="meta"><span class="tag">News</span><span class="tag">Pro</span></div>
+            <div class="meta"><span class="tag">Nouvelles</span></div>
           </article>
           <article class="linkcard" data-tags="schneier policy crypto privacy">
             <h4><a href="https://www.schneier.com/" target="_blank" rel="noopener">Schneier on Security</a></h4>
@@ -267,7 +267,21 @@
           </article>
         </div>
       </section>
-
+     <!-- ===== Communautés actives ===== -->
+      <section id="communautés" class="section-card accent" data-color="pink" data-section="communautés">
+        <div class="section-head">
+          <div class="section-title"><span class="badge">📰</span> <strong>Communautés actives</strong></div>
+          <div class="section-actions mini">Qui rejoindre pour s'impliquer</div>
+        </div>
+        <div class="links">
+          <article class="linkcard" data-tags="zdnet fr securite actualites">
+            <h4><a href="https://hackfest.ca/" target="_blank" rel="noopener">Hackfest</a></h4>
+            <p>Rejoignez l'une des communautés les plus actives au Québec.</p>
+            <div class="meta"><span class="tag">communauté</span></div>
+          </article>
+       
+        </div>
+      </section>
     </div>
 
     <p class="footnote">Astuce : appuyez sur <span class="kbd">/</span> pour placer le curseur dans la recherche.</p>
