--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -259,11 +259,34 @@
     </section>
 
     <!-- ===== CONTENU ===== -->
-    <section class="terminal-section" id="introduction">
-      <h2>Introduction</h2>
+<section class="terminal-section" id="profil">
+  <h2>Qui êtes-vous&nbsp;?</h2>
+
+  <div class="profil-wrapper">
+    <div class="profil-image">
+      <img src="img/huguette.jpg"
+           alt="Huguette, 74 ans, retraitée"
+           loading="lazy">
+    </div>
+
+    <div class="profil-texte">
       <p>
-        [Texte à insérer ici]
+        <strong>Huguette, 74 ans, retraitée.</strong><br><br>
+        Totalement autonome dans l’utilisation d’appareils informatiques,
+        elle utilise sa tablette pour jouer en ligne, préparer son prochain
+        voyage dans le sud, relever ses courriels et accéder à ses comptes
+        bancaires.
       </p>
+
+      <p>
+        Elle entend souvent parler d’escroqueries en ligne dans les médias,
+        mais ne sait pas quelles mesures concrètes elle pourrait prendre
+        pour s’en protéger.
+      </p>
+    </div>
+  </div>
+</section>
+
 
       <!-- Optionnel : image -->
       <!--
