Update image source from huguette.jpg to huguette.jpeg

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -264,8 +264,7 @@
 
   <div class="profil-wrapper">
     <div class="profil-image">
-      <img src="img/huguette.jpg"
-           alt="Huguette, 74 ans, retraitée"
+      <img src="img/huguette.jpeg"
            loading="lazy">
     </div>
 
