Fix image source extension from .jpeg to .jpg

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -264,7 +264,8 @@
 
   <div class="profil-wrapper">
     <div class="profil-image">
-      <img src="img/huguette.jpeg"
+      <img src="img/huguette.jpg"
+           alt="Huguette, 74 ans, retraitée"
            loading="lazy">
     </div>
 
@@ -285,6 +286,7 @@
     </div>
   </div>
 </section>
+
 
 
       <!-- Optionnel : image -->
