Change image format from JPG to JPEG

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -43,7 +43,7 @@
 
       <!-- Image -->
       <div class="profil-image">
-        <img src="img/huguette.jpg"
+        <img src="img/huguette.jpeg"
              alt="Huguette, 74 ans, retraitée">
       </div>
 
