Replace footer with back-to-top link

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -76,9 +76,9 @@
   </section>
 
   <!-- ===== FOOTER ===== -->
-  <footer style="text-align:center; margin-top:40px;">
-    <a href="#top" class="btn">↑ Retour en haut</a>
-  </footer>
+    <p style="text-align:center; line-height:1.6; font-size:1.1em;">
+      <a href="#top" class="back-to-top">↑ Retour en haut</a>
+    </p>
 
 </div>
 
