Refactor 'profil' section with new callout format
Updated the 'profil' section to improve structure and clarity.

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -36,7 +36,7 @@
     </section>
 
     <!-- ===== SECTION : QUI ÊTES-VOUS ? (photo gauche / texte droite) ===== -->
-    <section class="terminal-section" id="profil">
+    <section class="terminal-section article-section" id="profil">
       <h2>Qui êtes-vous&nbsp;?</h2>
 
       <div class="profil-wrapper">
@@ -57,10 +57,11 @@
       </div>
 
       <!-- Encadré façon “À retenir” -->
-      <h3>À retenir</h3>
-      <p>
-        [Une phrase courte, mémorable, qui résume le point clé de ce profil.]
-      </p>
+      <div class="callout-retain">
+        <strong>À retenir</strong><br>
+        Une phrase courte et mémorable.
+      </div>
+
     </section>
 
     <!-- ===== SECTION TYPE : THÈME / MYTHE ===== -->
