Add profile section for Anthony
Added a profile section for Anthony, detailing his profession and concerns regarding online security.

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -54,6 +54,21 @@
             elle pourrait prendre pour s’en protéger.
           </p>
         </div>
+
+        <div class="profil-image">
+          <!-- Chemin relatif si la page est dans /projects/phares/ -->
+          <img src="img/anthony.jpeg">
+        </div>
+
+        <div class="profil-texte">
+          <p>
+            <strong>Anthony, 28&nbsp;ans, jeune professionnel à son compte.</strong><br><br>
+            Travaille à distance en tant que spécialiste en effets spéciaux dans l’industrie du jeu vidéo. 
+            Il utilise son équipement informatique à titre personnel comme professionnel. Lui aussi entend les nouvelles dans les médias, 
+            s’inquiète des impacts potentiels d’une attaque par rançongiciel sur son activité, de la protection de ses crypto-monnaies, 
+            et de sa responsabilité personnelle en cas de fuite de données confidentielles d’un client si l’un de ses actifs informatiques était compromis. 
+          </p>
+        </div>
       </div>
 
       <!-- Encadré façon “À retenir” -->
