--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -55,11 +55,15 @@
           </p>
         </div>
 
+
+      </div>
+
         <div class="profil-image">
           <!-- Chemin relatif si la page est dans /projects/phares/ -->
           <img src="img/anthony.jpeg">
         </div>
 
+      <div class="profil-wrapper">  
         <div class="profil-texte">
           <p>
             <strong>Anthony, 28&nbsp;ans, jeune professionnel à son compte.</strong><br><br>
@@ -70,7 +74,6 @@
           </p>
         </div>
       </div>
-
       <!-- Encadré façon “À retenir” -->
       <div class="callout-retain">
         <strong>À retenir</strong><br>
